# forgejo-cli

./: .gitignore  .typos.toml  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  flake.nix
.forgejo/: pull_request_template.yml  renovate.json
.forgejo/issue_template/: bug-report.yml  config.yml  feature-request.yml  other.yml
.github/: Dockerfile
.github/workflows/: ci-release.yml
.woodpecker/: check-clippy.yml  check-typos.yml  check.yml  deploy.yml  publish.yml
forgejo-api/: Cargo.toml
forgejo-api/src/: lib.rs
localization/de-DE/: messages.ftl
localization/en-US/: messages.ftl
localization/fi/: messages.ftl
localization/fr/: messages.ftl
localization/it/: messages.ftl
localization/pl/: messages.ftl
localization/ru/: messages.ftl
localization/tok/: messages.ftl
localization/zh-Hans/: messages.ftl
src/: actions.rs  auth.rs  completion.rs  issues.rs  keys.rs  lib.rs  localization.rs  main.rs  org.rs  prs.rs  release.rs  repo.rs  tag.rs  user.rs  version.rs  whoami.rs  wiki.rs
src/issues/: template.rs
src/issues/template/: yaml.rs
src/org/: team.rs
tests/: localization_fallback.rs  localization_macros.rs  localization_placeables.rs
