[package]
name = "forgejo-cli"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://codeberg.org/Cyborus/forgejo-cli/"
description = "CLI tool for Forgejo"
keywords = ["cli", "forgejo"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fj"
path = "src/main.rs"

[features]
update-check = ["dep:semver"]

[dependencies]
auth-git2 = "0.5.4"
base64ct = { version = "1.6.0", features = ["std"] }
cfg-if = "1.0.0"
clap = { version = "4.5.11", features = ["derive"] }
clap_complete = "4.5.44"
comrak = "0.26.0"
crossterm = "0.27.0"
directories = "5.0.1"
eyre = "0.6.12"
forgejo-api = "0.6.0"
futures = "0.3.30"
git2 = "0.19.0"
hyper = "1.4.1"
hyper-util = { version = "0.1.6", features = ["tokio", "server", "http1", "http2"] }
open = "5.3.0"
rand = "0.8.5"
semver = { version = "1.0.23", optional = true }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha256 = "1.5.0"
soft_assert = "0.1.1"
time = { version = "0.3.36", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1.39.1", features = ["full"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }

[build-dependencies]
git2 = "0.19.0"

