[package]
name = "forgejo-cli"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://codeberg.org/forgejo-contrib/forgejo-cli/"
description = "CLI tool for Forgejo"
keywords = ["cli", "forgejo"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target-family }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "fj"
path = "src/main.rs"

[features]
update-check = ["dep:semver"]

[dependencies]
auth-git2 = "0.5.7"
base64ct = { version = "1.7.3", features = ["std"] }
cfg-if = "1.0.0"
clap = { version = "4.5.34", features = ["derive"] }
clap_complete = "4.5.47"
comrak = { version = "0.51.0", default-features = false }
crossterm = "0.29.0"
directories = "6.0.0"
eyre = "0.6.12"
forgejo-api = "0.9.0"
futures = "0.3.31"
git2 = "0.20.1"
hyper = "1.6.0"
hyper-util = { version = "0.1.11", features = ["tokio", "server", "http1", "http2"] }
open = "5.3.2"
rand = "0.10.0"
regex = "1.12.2"
semver = { version = "1.0.26", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde-saphyr = "0.0.21"
serde_json = "1.0.140"
sha2 = "0.10.9"
shlex = "1.3.0"
soft_assert = "0.1.1"
ssh2-config = "0.7.0"
time = { version = "0.3.41", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1.44.1", features = ["full"] }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4"] }

[build-dependencies]
git2 = "0.20.1"
uuid = "1.16.0"
